Homer-358 Footer fixes for styling on tablet and mobile

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,8 +2,7 @@
   background-color: #f5f5f0;
 
   .inner {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding: 48px 0 ;
     max-width: 1200px;
     position: relative;
     margin: 0 auto;
@@ -32,14 +31,58 @@
     flex-direction: column;
     row-gap: 24px;
     justify-content: space-between;
+    margin-bottom: 90px;
+    @media(min-width: 768px) {
+      margin-bottom: 0;
+    }
   }
 
   .grid-item-3 {
     nav {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: start;
+      position: relative;
+      @media(min-width: 1024px) {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: start;
+      }
+      & > a {
+
+        @media (min-width: 768px) {
+          position: absolute;
+          top: 0;
+          right: 0;
+        }
+        @media (min-width: 1024px) {
+          position: relative;
+        }
+      }
+      a.footer--services-link {
+        @media (min-width: 768px) {
+          position: relative !important;
+        }
+
+      }
+
+      a.footer--careers-link {
+        @media(min-width: 768px) {
+          top: 39px;
+        }
+        @media(min-width: 1024px) {
+          top: 0;
+        }
+
+      }
+      & > a:last-child {
+        @media(min-width: 768px) {
+          top: 78px;
+        }
+        @media(min-width: 1024px) {
+          top: 0;
+        }
+      }
+
+
     }
 
     .column {
@@ -49,7 +92,7 @@
 
     .body-small {
       font-weight: normal;
-      padding: 10px 0;
+      padding: 8px 0;
     }
 
     a {
@@ -59,6 +102,11 @@
       font-weight: 600;
       font-size: 14px;
       font-family: $secondary-font;
+      padding: 16px 0;
+      display: block;
+      @media(min-width: 1024px) {
+
+      }
     }
   }
 
@@ -70,13 +118,24 @@
 
     .bottom-links {
       display: flex;
-      flex-direction: row;
+      flex-direction: column-reverse;
       align-items: flex-end;
       column-gap: 36px;
+      @media(min-width: 1024px) {
+        flex-direction: row;
+      }
     }
-
+    & > .body-small {
+      position: absolute;
+      top: 42%;
+      @media(min-width: 768px) {
+        position: relative;
+        top: 0;
+      }
+    }
     .body-small {
       font-weight: normal;
+
     }
   }
 
@@ -98,8 +157,8 @@
       flex-direction: column;
       justify-content: start;
       align-items: flex-start;
-      row-gap: 20px;
-      margin-bottom: 20px;
+      row-gap: 33px;
+      margin-bottom: 32px;
     }
 
     .grid-item-3 {
@@ -109,7 +168,7 @@
     nav {
       column-gap: 50px;
       margin: 0 20px;
-      row-gap: 24px;
+      //row-gap: 24px;
       flex-wrap: wrap;
     }
 
@@ -122,7 +181,7 @@
     }
 
     .grid-item-4 > .bottom-links {
-      flex-direction: column;
+
       align-items: flex-start;
       row-gap: 16px;
     }
